<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF0000"
        android:gravity="center"
        android:padding="12sp"
        android:text="@string/app_name"
        android:textColor="#090"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvInfos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text="@string/home_infos" />

    <TextView
        android:id="@+id/tvNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stub" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btMap"
            style="@style/button_vert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_title" />

        <Button
            android:id="@+id/btAlert"
            style="@style/button_vert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_title" />

    </LinearLayout>
</LinearLayout>
