<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_thetitle" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|textCapWords"
        android:text="" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_location" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapSentences"
        android:text="" />

    <TextView
        android:id="@+id/tvInformations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_informations" />

    <EditText
        android:id="@+id/etInformations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text=""
        android:gravity="top"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_send"
        android:onClick="send"/>

    <TextView
        android:id="@+id/tvPlease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_please" />

</LinearLayout>
















